# python-vercel-tests

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  vercel.json
python_vercel_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
